# BreastCancer-ClassifierAnalysis

./: .gitignore  .~lock.base_classifiers_scores.ods#  BreastCancer_Classifier_Comparison.ipynb  README.md  base_classifiers_scores.ods  metrics.json  new_features.json  pyproject.toml
latex_document/: bibliography.bib  makefile  test.aux  test.ist  test.out  test.tex  test.toc  tfg_ivan.acn  tfg_ivan.acr  tfg_ivan.alg  tfg_ivan.aux  tfg_ivan.bbl  tfg_ivan.blg  tfg_ivan.glg  tfg_ivan.glsdefs  tfg_ivan.ist  tfg_ivan.loa  tfg_ivan.loe  tfg_ivan.lof  tfg_ivan.lol  tfg_ivan.lot  tfg_ivan.out  tfg_ivan.tex  tfg_ivan.toc  tfg_ivan.xdy
latex_document/appendix/: codesnippets.tex  descriptivetable.tex  eda.tex  webapp.tex
latex_document/codes/: explainer.py  pipeline.py  shap_plots.py
latex_document/conclusionsfuture/: conclusions.tex  conclusionsfuture.tex  future.tex
latex_document/designimplementation/: building.tex  descriptive.tex  designimplementation.tex  eda.tex  functional.tex  nonfunctional.tex  pca.tex  preprocessing.tex  requirements.tex  scaling.tex  shap.tex  structure.tex  visualization.tex  webapp.tex
latex_document/experimentsresults/: basecomparison.tex  bestclassifier.tex  comparison.tex  (+6 more)
plantilla-latex-para-tfx-tesis-master/: .gitignore  bibliography.bib  test.aux  test.bbl  test.blg  test.ist  test.lof  test.out  test.tex  test.toc  test.xdy  tfgtfmthesisuam.acn  tfgtfmthesisuam.aux  tfgtfmthesisuam.glo  tfgtfmthesisuam.idx  tfgtfmthesisuam.loa  tfgtfmthesisuam.lol  tfgtfmthesisuam.ltb  tfgtfmthesisuam.out  tfgtfmthesisuam.tex  tfgtfmthesisuam.xdy
(+23 files in other folders)
