[tool.poetry]
name = "breastcancer-classifieranalysis"
version = "0.1.0"
description = ""
authors = ["LittleHaku <ivandelhorno@gmail.com>"]
license = "GPL-3.0 license"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.3"
scikit-learn = "^1.3.2"
ipykernel = "^6.28.0"
pandas = "^2.1.4"
seaborn = "^0.13.1"
matplotlib = "^3.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
